# minagi-file-classifier

./: .gitignore  CLAUDE.md  LICENSE  README.md  build.ps1
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/nsis/: installer.nsh
src-tauri/nsis/template/: English.nsh  installer.nsi
src-tauri/src/: lib.rs  main.rs
src/scripts/: history.js  renderer.js
src/styles/: history.css  main.css
